<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_15">

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/background_description"
                android:layout_marginBottom="@dimen/dimen_10" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:textColor="@color/high_white"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/favorite_selected"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_15" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:tint="@color/favorite_selected"
                    android:contentDescription="@string/votes"
                    app:layout_constraintEnd_toStartOf="@+id/detail_rating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed" />

                <TextView
                    android:id="@+id/detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/high_white"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:layout_marginTop="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:textSize="13sp"
                    android:textColor="@color/high_white"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="@string/votes"
                    android:textSize="13sp"
                    android:textColor="@color/high_white"
                    android:layout_marginStart="@dimen/dimen_5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/detail_user" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.333" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_language"
                    android:tint="@color/favorite_selected"
                    android:contentDescription="@string/language"
                    app:layout_constraintEnd_toStartOf="@+id/detail_language"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/high_white"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:text="@string/language"
                    android:textSize="13sp"
                    android:textColor="@color/high_white"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.666" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/favorite_selected"
                    android:contentDescription="@string/release_date"
                    app:layout_constraintEnd_toStartOf="@+id/detail_release"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@color/high_white"
                    android:layout_marginStart="@dimen/dimen_5"
                    android:layout_marginTop="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textSize="13sp"
                    android:textColor="@color/high_white"
                    android:layout_marginTop="@dimen/dimen_5"
                    app:layout_constraintEnd_toStartOf="@+id/guideline5"
                    app:layout_constraintStart_toStartOf="@+id/guideline4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/favorite_selected"
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_marginBottom="@dimen/dimen_15" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:textColor="@color/high_white"
                android:layout_marginBottom="@dimen/dimen_5"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_15" />

            <TextView
                android:id="@+id/detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/high_white"
                android:justificationMode="inter_word"
                android:layout_marginStart="@dimen/dimen_15"
                android:layout_marginEnd="@dimen/dimen_15" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>